# comme-cy

./: MANIFEST.in  README.md  pyproject.toml
commecy/: __init__.py  commeci.c  normalizer.py  test.py
commecy/data/: map.csv
tests/: sents.json  test.py  words.csv
