[project]
name = "commecy"
authors = [{name="thjbdvlt"}]
version = "0.1.0"
description = "french words normalizer for spacy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/thjbdvlt/commecy"

[project.entry-points.spacy_factories]
commecy_normalizer = "commecy.normalizer:create_commecy_normalizer"

[build-system]
requires = ["setuptools>=74.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [{name = "commecy.commeci", sources = ["commecy/commeci.c"], include-dirs = ["lib"], py-limited-api = true }]

[tool.setuptools.packages]
find = {}

[tool.ruff]
exclude = []
line-length = 72

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
